# lumine

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: ci.yml  release.yml
src/: logging.rs  main.rs
src/app/: errors.rs  mod.rs
src/audio/: converter.rs  devices.rs  errors.rs  mod.rs  recorder.rs
src/audio/platform/: linux.rs  macos.rs  mod.rs
src/cli/: cli_tests.rs  mod.rs
src/config/: config_tests.rs  errors.rs  mod.rs
src/ffmpeg/: devices.rs  errors.rs  ffmpeg_tests.rs  mod.rs
src/files/: errors.rs  files_tests.rs  mod.rs  operations.rs  temporary.rs  temporary_tests.rs
src/network/: errors.rs  mod.rs  network_tests.rs
src/output/: format.rs  mod.rs
src/process/: errors.rs  executor.rs  mod.rs
src/whisper/: errors.rs  mod.rs  responses.rs  whisper_tests.rs
