[package]
name = "lumine"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
toml = "0.9.11"
xdg = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.2"
chrono = "0.4.42"
reqwest = { version = "0.13.1", features = ["multipart"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "process",
] }
hound = "3.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15.1", features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.15.1", features = ["vulkan"] }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.15.1", features = ["vulkan"] }

[lints.clippy]
needless_return = "allow"
upper_case_acronyms = "allow"
